--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -4,10 +4,9 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f5f5f5;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
   user-select: none;
 }
 
@@ -28,11 +27,8 @@ code {
 }
 
 #root {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-bottom: 80px;
+  width: 100%;
+  height: 100%;
 }
 
 .logo {
